fix map marker click event not triggering on safari

--- a/client/sass/app/common/map.scss
+++ b/client/sass/app/common/map.scss
@@ -28,6 +28,7 @@
     img {
       width: 45px; 
       height: 45px;
+      pointer-events: none;
     }
   }
 }
